--- a/templates/swipe.html
+++ b/templates/swipe.html
@@ -32,5 +32,24 @@
 
     </div>
 
+    <section>
+
+            <div>
+                    <form method="POST" action="" novalidate>
+                      {{ form.hidden_tag() }}
+              
+                      <div class="field">
+                        {{ form.review.label }}
+                        {{ form.review(class_="textarea") }}
+                      </div>
+              
+                      {{ form.submit(class_="button") }}
+                    </form>
+                  </div>
+    </section>
+
+
+    
+
 
 {% endblock %}
