--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,14 +5,26 @@
     <title></title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script type="text/javascript" src="{{ url_for('static', filename = 'app.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename = 'app.js') }}"></script>
 </head>
 
 <body>
+        <nav>
+            <div class="buttons">
+            {% if current_user.is_authenticated %}
+                    <a href="{{url_for('logout')}}" title="logout">Logout</a>
+                    {% else %}
+                    <a href="{{url_for('loginPage')}}" title="login">Login</a>
+                    <a href="{{url_for('signupPage')}}" title="register">Signup</a>
+            {% endif %}
+            </div>
+        </nav>
    
     <div class="columns" style="padding: 0 20px">
         <div class="column">
+            <h1>{% if current_user.is_authenticated %} Hello {{current_user.username}} {%endif%}</h1>
             {% block content %}
             {% endblock %}
         </div>
