--- a/templates/landing.html
+++ b/templates/landing.html
@@ -2,12 +2,5 @@
 {% extends "layout.html" %}
 
 {% block content %}
-<h1>Landing Page</h1>
-<article >
-    <div >
-    </div>
-    <div>
-       
-    </div>
-</article>
+<h1>PlantSwiper</h1>
 {% endblock %}
