--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,20 +11,20 @@
 </head>
 
 <body>
-        <nav>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="buttons">
             {% if current_user.is_authenticated %}
-                    <a href="{{url_for('logout')}}" title="logout">Logout</a>
+                    <a class="navbar-brand" href="{{url_for('profilePage')}}" title="profile">Profile</a>
+                    <a class="navbar-brand" href="{{url_for('logout')}}" title="logout">Logout</a>
                     {% else %}
-                    <a href="{{url_for('loginPage')}}" title="login">Login</a>
-                    <a href="{{url_for('signupPage')}}" title="register">Signup</a>
+                    <a class="navbar-brand" href="{{url_for('loginPage')}}" title="login">Login</a>
+                    <a class="navbar-brand" href="{{url_for('signupPage')}}" title="register">Signup</a>
             {% endif %}
             </div>
         </nav>
    
     <div class="columns" style="padding: 0 20px">
         <div class="column">
-            <h1>{% if current_user.is_authenticated %} Hello {{current_user.username}} {%endif%}</h1>
             {% block content %}
             {% endblock %}
         </div>
