--- a/templates/profile.html
+++ b/templates/profile.html
@@ -2,13 +2,5 @@
 {% extends "layout.html" %}
 
 {% block content %}
-<h1>Landing Page</h1>
-<article >
-    <div >
-        <h1>Profile Page </h1>
-    </div>
-    <div >
-       
-    </div>
-</article>
+<h1>{% if current_user.is_authenticated %} Hello {{current_user.username}} {%endif%}</h1>
 {% endblock %}
