--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,10 +1,13 @@
+{% extends "layout.html" %}
 {% from 'macros.html' import render_field %}
 
+{% block content %}
 <form method="POST" action="" class="form">
     {{ form.hidden_tag() }}
     {% for field in form %}
-        {{ render_field(field) }}
+    {{ render_field(field) }}
     {% endfor %}
     </div>
     <button type="submit" id="submit">Register!</button>
 </form>
+{% endblock %}
