--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,39 +1,52 @@
 <!DOCTYPE html>
+
 <head>
     <title></title>
-
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+        crossorigin="anonymous">
+
+    <!-- <link rel="stylesheet" src="{{ url_for('static', filename = 'styles.css') }}"> -->
+    <link rel="stylesheet" href="/static/styles.css">
+    </link>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script type="text/javascript" src="{{ url_for('static', filename = 'app.js') }}"></script>
 </head>
 
 <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="buttons">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="buttons">
             {% if current_user.is_authenticated %}
-                    <a class="navbar-brand" href="{{url_for('profilePage')}}" title="profile">Profile</a>
-                    <a class="navbar-brand" href="{{url_for('logout')}}" title="logout">Logout</a>
-                    {% else %}
-                    <a class="navbar-brand" href="{{url_for('loginPage')}}" title="login">Login</a>
-                    <a class="navbar-brand" href="{{url_for('signupPage')}}" title="register">Signup</a>
+            <a class="navbar-brand" href="{{url_for('profilePage')}}" title="profile">Profile</a>
+            <a class="navbar-brand" href="{{url_for('logout')}}" title="logout">Logout</a>
+            {% else %}
+            <a class="navbar-brand" href="{{url_for('loginPage')}}" title="login">Login</a>
+            <a class="navbar-brand" href="{{url_for('signupPage')}}" title="register">Signup</a>
             {% endif %}
-            </div>
-        </nav>
-   
-    <div class="columns" style="padding: 0 20px">
+        </div>
+    </nav>
+
+
+
+    <div class="columns backgroundImage" style="padding: 0 20px">
         <div class="column">
+
             {% block content %}
             {% endblock %}
         </div>
         <div class="column">
         </div>
     </div>
-    
 
 
+    <!-- ! SCRIPTS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 
 </body>
 
 </html>
-
