--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,7 +12,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="buttons">
             {% if current_user.is_authenticated %}
-                    <a class="navbar-brand" href="{{url_for('profilePage')}}" title="profile">Profile</a>
+                    <a class="navbar-brand" href="{{url_for('swipePage')}}" title="swipe">Swipe</a>
                     <a class="navbar-brand" href="{{url_for('logout')}}" title="logout">Logout</a>
                     {% else %}
                     <a class="navbar-brand" href="{{url_for('loginPage')}}" title="login">Login</a>
