--- a/templates/swipe.html
+++ b/templates/swipe.html
@@ -1,9 +1,14 @@
 
 {% extends "layout.html" %}
+{% from 'macros.html' import render_field %}
 
 {% block content %}
 <h1>Swipe Page</h1>
     <div >
+         <div>
+             <img class= "plantImage" src="{{url_for('static', filename='lizard.jpg')}}" />
+        </div>
+        
         <div>
             <span class = "species">Species</span>
         </div>
@@ -17,8 +22,9 @@
         </div>
 
         <div>
-            <img class= "plantImage" src="{{url_for('static', filename='lizard.jpg')}}" />
+            <span class = "light">Light</span>
         </div>
+
 
     </div>
     <button class = "yesButton">YEUUUHHH</button>
@@ -31,6 +37,14 @@
         </ul>
 
     </div>
+
+    <form method="POST" action="">
+            {{ form.hidden_tag() }}
+            {% for field in form %}
+                {{ render_field(field) }}
+            {% endfor %}
+            <button class="submitButton" type="submit" >Post</button>
+    </form>
 
 
 {% endblock %}
