--- a/static/styles.css
+++ b/static/styles.css
@@ -1,3 +1,46 @@
-body {
+/* body {
     background-image: url('https://images.unsplash.com/photo-1552907241-694fb71840d7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1010&q=80');
+    background-color: red;
+} */
+
+/* ! Background image for signin  */
+.backgroundImage {
+    background-image: url("/static/login.jpeg");
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100vw;
+    height: 100vh;
+    background-size: cover;
+}
+
+
+/* ! Background image for signup  */
+.signupBackgroundImage {
+    background-image: url("/static/signup.jpeg");
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100vw;
+    height: 100vh;
+    background-size: cover;
+}
+
+#video-background {
+    right: 0;
+    bottom: 0;
+    min-width: 100vw;
+    min-height: 100vh;
+    width: auto;
+    height: auto;
+    z-index: 2;
+}
+
+/* !! Sign up form */
+#signup {
+    margin: 0 auto;
+    width: 400px;
+    background-color: blue;
+}
+
+.signup {
+    margin-left: 32%;
 }
