--- a/templates/landing.html
+++ b/templates/landing.html
@@ -1,6 +1,11 @@
-
 {% extends "layout.html" %}
 
 {% block content %}
-<h1>PlantSwiper</h1>
+<div>
+    <video id="video-background" autoplay loop muted>
+        <source src="https://player.vimeo.com/external/158148793.hd.mp4?s=8e8741dbee251d5c35a759718d4b0976fbf38b6f&profile_id=119&oauth2_token_id=57447761"
+            type="video/mp4">
+    </video>
+</div>
+<h1 class="text-center">PlantSwiper</h1>
 {% endblock %}
