--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
         crossorigin="anonymous">
 
-    <!-- <link rel="stylesheet" src="{{ url_for('static', filename = 'styles.css') }}"> -->
-    <link rel="stylesheet" href="/static/styles.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename = 'styles.css') }}">
+    <!-- <link rel="stylesheet" href="/static/styles.css"> -->
     </link>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script type="text/javascript" src="{{ url_for('static', filename = 'app.js') }}"></script>
@@ -28,7 +28,7 @@
 
 
 
-    <div class="columns backgroundImage" style="padding: 0 20px">
+    <div class="columns">
         <div class="column">
 
             {% block content %}
