--- a/templates/login.html
+++ b/templates/login.html
@@ -1,16 +1,19 @@
 {% extends "layout.html" %}
 {% from 'macros.html' import render_field %}
 
+<style type="text/css" src="./static/styles.css">
+</style>
 
-<div>
 {% block content %}
-    <form method="POST" action="" class="form">
-        {{ form.hidden_tag() }}
-        {% for field in form %}
-        {{ render_field(field) }}
-        {% endfor %}
-        <button type="submit" id="submit">Login</button>
-    </form>
-
+<div class="backgroundImage">
+    <div class="form-group">
+        <form method="POST" action="" class="form">
+            {{ form.hidden_tag() }}
+            {% for field in form %}
+            {{ render_field(field) }}
+            {% endfor %}
+            <button type="submit" id="submit">Login</button>
+        </form>
+    </div>
 </div>
 {% endblock %}
