--- a/templates/signup.html
+++ b/templates/signup.html
@@ -2,12 +2,17 @@
 {% from 'macros.html' import render_field %}
 
 {% block content %}
-<form method="POST" action="" class="form">
-    {{ form.hidden_tag() }}
-    {% for field in form %}
-    {{ render_field(field) }}
-    {% endfor %}
+<div class="signupBackgroundImage d-flex">
+
+    <div class="d-flex flex-column justify-content-center signup">
+        <form method="POST" action="" class="form">
+            {{ form.hidden_tag() }}
+            {% for field in form %}
+            {{ render_field(field) }}
+            {% endfor %}
+
+            <button type="submit" id="submit">Register!</button>
+        </form>
     </div>
-    <button type="submit" id="submit">Register!</button>
-</form>
+</div>
 {% endblock %}
