--- a/templates/login.html
+++ b/templates/login.html
@@ -5,15 +5,39 @@
 </style>
 
 {% block content %}
-<div class="backgroundImage d-flex">
+<div class="backgroundImage d-flex ">
     <div class="form-group d-flex flex-column justify-content-center">
-        <form method="POST" action="" class="form">
+        <form method="POST" action="" class="form-group">
             {{ form.hidden_tag() }}
             {% for field in form %}
             {{ render_field(field) }}
             {% endfor %}
-            <button type="submit" id="submit">Login</button>
+            <button class="btn btn-primary" type="submit" id="submit">Login</button>
         </form>
+
+        <!-- !! Using bootstrap form from here -->
+        <!-- <form method="POST" action="" class="form">
+            <div class="form-group">
+                <label for="exampleInputEmail1">Email address</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                    placeholder="Enter email">
+                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
+                    else.</small>
+            </div>
+            <div class="form-group">
+                {{ form.hidden_tag() }}
+                {% for field in form %}
+                {{ render_field(field) }}
+                {% endfor %}
+                <label for="exampleInputPassword1">Password</label>
+                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+            </div>
+
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form> -->
+
+
+        <!-- !! ends here -->
     </div>
 </div>
 {% endblock %}
