--- a/templates/signup.html
+++ b/templates/signup.html
@@ -2,16 +2,15 @@
 {% from 'macros.html' import render_field %}
 
 {% block content %}
-<div class="signupBackgroundImage d-flex">
-
+<div class="signupBackgroundImage d-flex justify-content-center">
     <div class="d-flex flex-column justify-content-center signup">
-        <form method="POST" action="" class="form">
+        <form method="POST" action="" class="form-group">
             {{ form.hidden_tag() }}
             {% for field in form %}
             {{ render_field(field) }}
             {% endfor %}
 
-            <button type="submit" id="submit">Register!</button>
+            <button class="btn btn-primary" type="submit" id="submit">Register!</button>
         </form>
     </div>
 </div>
