--- a/static/styles.css
+++ b/static/styles.css
@@ -23,10 +23,6 @@
     justify-content: center;
 }
 
-/* .signup {
-    margin-left: 24%;
-} */
-
 .field input,
 #submit {
     height: 3em;
@@ -36,4 +32,10 @@
 
 .form {
     margin-left: 16%;
+}
+
+/* ! Resizing the images  */
+.card img {
+    width: 400px;
+    height: 400px;
 }
