--- a/templates/stream.html
+++ b/templates/stream.html
@@ -43,13 +43,15 @@
                         {{ form2.text.label }}
                         {{ form2.text() }}
                       </div>
-                  
+                      <div>
+                          <input  id="idNumber" name="idNumber" type="text" value="{{reviews.id}}">
+                      </div>
                       <input id="submit" name="submit" type="submit" value="Save">
                     </form>
               </span>
           <p class="card-text">{{ reviews.plant }}</p>
           <button class='editButton' >Edit</button>
-          <a href="{{url_for('delete', idNumber = reviews.id)}}" title="delete">Delete</a>
+          <a  href="{{url_for('delete', idNumber = reviews.id)}}" title="delete">Delete</a>
     
         </div>
       </div>
