hid idNumber input

--- a/templates/stream.html
+++ b/templates/stream.html
@@ -44,7 +44,7 @@
                         {{ form2.text() }}
                       </div>
                       <div>
-                          <input  id="idNumber" name="idNumber" type="text" value="{{reviews.id}}">
+                          <input hidden="hidden"  id="idNumber" name="idNumber" type="text" value="{{reviews.id}}">
                       </div>
                       <input id="submit" name="submit" type="submit" value="Save">
                     </form>
