--- a/templates/stream.html
+++ b/templates/stream.html
@@ -37,11 +37,11 @@
                       </div>
                       <div>
                         {{ form.rating.label }}
-                        {{ form2.rating() }}
+                        <input id="rating" name="rating" type="text" value="{{reviews.rating}}">
                       </div>
                       <div>
                         {{ form2.text.label }}
-                        {{ form2.text() }}
+                        <input id="text" name="text" type="text" value="{{reviews.text}}">
                       </div>
                       <div>
                           <input hidden="hidden"  id="idNumber" name="idNumber" type="text" value="{{reviews.id}}">
@@ -49,7 +49,9 @@
                       <input id="submit" name="submit" type="submit" value="Save">
                     </form>
               </span>
-          <p class="card-text">{{ reviews.plant }}</p>
+          <p class="card-text"></p>{{ reviews.plant }}</p>
+          <p class="card-text"></p>{{ reviews.rating }}</p>
+          <p class="card-text"></p>{{ reviews.text}}</p>
           <button class='editButton' >Edit</button>
           <a  href="{{url_for('delete', idNumber = reviews.id)}}" title="delete">Delete</a>
     
