--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,13 +3,13 @@
 <head>
     <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <link rel="stylesheet" href="{{ url_for('static', filename = 'styles.css') }}">
-    <!-- <link rel="stylesheet" href="/static/styles.css"> -->
-    </link>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
     <script type="text/javascript" src="{{ url_for('static', filename = 'app.js') }}"></script>
 </head>
 
@@ -17,11 +17,11 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="buttons">
             {% if current_user.is_authenticated %}
-                    <a class="navbar-brand" href="{{url_for('swipePage')}}" title="swipe">Swipe</a>
-                    <a class="navbar-brand" href="{{url_for('logout')}}" title="logout">Logout</a>
-                    {% else %}
-                    <a class="navbar-brand" href="{{url_for('loginPage')}}" title="login">Login</a>
-                    <a class="navbar-brand" href="{{url_for('signupPage')}}" title="register">Signup</a>
+            <a class="navbar-brand" href="{{url_for('swipePage')}}" title="swipe">Swipe</a>
+            <a class="navbar-brand" href="{{url_for('logout')}}" title="logout">Logout</a>
+            {% else %}
+            <a class="navbar-brand" href="{{url_for('loginPage')}}" title="login">Login</a>
+            <a class="navbar-brand" href="{{url_for('signupPage')}}" title="register">Signup</a>
             {% endif %}
         </div>
     </nav>
@@ -29,7 +29,7 @@
 
 
     <div class="columns">
-        <div class="column">
+        <div class="column ">
 
             {% block content %}
             {% endblock %}
@@ -38,13 +38,8 @@
         </div>
     </div>
 
-<!-- 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script> -->
+
+
 
 </body>
 
