--- a/templates/swipe.html
+++ b/templates/swipe.html
@@ -40,9 +40,7 @@
 
 <form method="POST" action="">
     {{ form3.hidden_tag() }}
-    {% for field in form3 %}
-        {{ render_field(field) }}
-    {% endfor %}
+    <input id="userPlants" name="userPlants" type="text" value="">
     <button class="submitButton" type="submit" >Post</button>
 </form>
 
