plants are posted to stream

--- a/templates/stream.html
+++ b/templates/stream.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}
 
+
 {% block content %}
 
 
@@ -23,38 +24,16 @@
   </form>
 
 
-{% for reviews in stream %}
-      <div class="card" style="width: 18rem;">
-         <h5 class="card-title"><a class="btn btn-primary" href="{{ url_for('stream', username=reviews.user.username) }}"></a></h5>
-        <div class="card-body">
-              <span class="mySpan">
-                  <form method="POST" action="" novalidate>
-                      {{ form2.hidden_tag() }}
-                  
-                      <div>
-                        {{ form2.plant.label }}
-                        <input id="plant" name="plant" type="text" value="{{reviews.plant}}">
-                      </div>
-                      <div>
-                        {{ form.rating.label }}
-                        {{ form2.rating() }}
-                      </div>
-                      <div>
-                        {{ form2.text.label }}
-                        {{ form2.text() }}
-                      </div>
-                      <div>
-                          <input hidden="hidden"  id="idNumber" name="idNumber" type="text" value="{{reviews.id}}">
-                      </div>
-                      <input id="submit" name="submit" type="submit" value="Save">
-                    </form>
-              </span>
-          <p class="card-text">{{ reviews.plant }}</p>
-          <button class='editButton' >Edit</button>
-          <a  href="{{url_for('delete', idNumber = reviews.id)}}" title="delete">Delete</a>
-    
+      {% for userPlants in stream %}
+
+        <div>
+          <p class="card-text">{{ userPlants.userPlants }}</p>
+
         </div>
-      </div>
-{% endfor %}
+
+      {% endfor %}
+
+
+
 {% endblock %}
 
