--- a/templates/swipe.html
+++ b/templates/swipe.html
@@ -41,7 +41,7 @@
 <form method="POST" action="">
     {{ form3.hidden_tag() }}
     <input id="userPlants" name="userPlants" type="text" value="">
-    <button class="submitButton" type="submit" >Post</button>
+    <button id= "submit" type="submit" >Post</button>
 </form>
 
 
