--- a/templates/stream.html
+++ b/templates/stream.html
@@ -50,6 +50,9 @@
                     </form>
               </span>
           <p class="card-text">{{ reviews.plant }}</p>
+          <p class="card-text">{{ reviews.rating }}</p>
+          <p class="card-text">{{ reviews.text }}</p>
+
           <button class='editButton' >Edit</button>
           <a  href="{{url_for('delete', idNumber = reviews.id)}}" title="delete">Delete</a>
     
