--- a/templates/stream.html
+++ b/templates/stream.html
@@ -37,11 +37,11 @@
                       </div>
                       <div>
                         {{ form.rating.label }}
-                        {{ form2.rating() }}
+                        <input id="plant" name="plant" type="text" value="{{reviews.rating}}">
                       </div>
                       <div>
                         {{ form2.text.label }}
-                        {{ form2.text() }}
+                        <input id="plant" name="plant" type="text" value="{{reviews.text}}">
                       </div>
                       <div>
                           <input hidden="hidden"  id="idNumber" name="idNumber" type="text" value="{{reviews.id}}">
