edit works but creating new post as well

--- a/templates/stream.html
+++ b/templates/stream.html
@@ -37,11 +37,11 @@
                       </div>
                       <div>
                         {{ form.rating.label }}
-                        <input id="plant" name="plant" type="text" value="{{reviews.rating}}">
+                        <input id="rating" name="rating" type="text" value="{{reviews.rating}}">
                       </div>
                       <div>
                         {{ form2.text.label }}
-                        <input id="plant" name="plant" type="text" value="{{reviews.text}}">
+                        <input id="text" name="text" type="text" value="{{reviews.text}}">
                       </div>
                       <div>
                           <input hidden="hidden"  id="idNumber" name="idNumber" type="text" value="{{reviews.id}}">
