--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,10 +14,12 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-light bg-light d-flex align-items-start">
         <div class="buttons">
             {% if current_user.is_authenticated %}
+                    <a class="navbar-brand" href="{{url_for('landingPage')}}" title="swipe">Home</a>
                     <a class="navbar-brand" href="{{url_for('swipePage')}}" title="swipe">Swipe</a>
+                    <a class="navbar-brand" href="{{url_for('stream')}}" title="swipe">Profile</a>
                     <a class="navbar-brand" href="{{url_for('logout')}}" title="logout">Logout</a>
                     {% else %}
                     <a class="navbar-brand" href="{{url_for('loginPage')}}" title="login">Login</a>
