--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,9 +14,13 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-light bg-light d-flex align-items-start">
+
+    
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="buttons">
             {% if current_user.is_authenticated %}
+        
+
                     <a class="navbar-brand" href="{{url_for('landingPage')}}" title="swipe">Home</a>
                     <a class="navbar-brand" href="{{url_for('swipePage')}}" title="swipe">Swipe</a>
                     <a class="navbar-brand" href="{{url_for('stream')}}" title="swipe">Profile</a>
@@ -24,6 +28,7 @@
                     {% else %}
                     <a class="navbar-brand" href="{{url_for('loginPage')}}" title="login">Login</a>
                     <a class="navbar-brand" href="{{url_for('signupPage')}}" title="register">Signup</a>
+        
             {% endif %}
         </div>
     </nav>
