--- a/templates/stream.html
+++ b/templates/stream.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 
-<form method="POST" action="" novalidate>
+<form method="post" action="{{ url_for('create_review') }}" novalidate>
     {{ form.hidden_tag() }}
 
     <div>
@@ -46,7 +46,8 @@
                       <div>
                           <input hidden="hidden"  id="idNumber" name="idNumber" type="text" value="{{reviews.id}}">
                       </div>
-                      <input id="submit" name="submit" type="submit" value="Save">
+                      {{ form2.submit2() }}
+
                     </form>
               </span>
           <p class="card-text">{{ reviews.plant }}</p>
