--- a/static/styles.css
+++ b/static/styles.css
@@ -44,3 +44,46 @@
     display: hidden;
     color: red;
 }
+
+
+/* ! for landinga page */
+.titleMessage {
+    position: absolute;
+    width: 100%;
+    height: 250px;
+    top: 50%;
+    z-index: 5;
+    text-align: center;
+    margin-top: -125px;
+}
+
+.titleMessage .heading p {
+    color: #fff;
+    text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.4);
+    font-weight: 100;
+    letter-spacing: 7px;
+}
+
+.titleMessage .heading .main {
+    font-size: 50px;
+    color: white
+}
+
+.titleMessage .heading .sub {
+    font-size: 23px;
+    color: goldenrod;
+}
+
+.overlay {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 3;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.slides-navigation i {
+    font-size: 50px;
+
+
+}
