--- a/templates/stream.html
+++ b/templates/stream.html
@@ -53,7 +53,7 @@
           <p class="card-text">{{ reviews.rating }}</p>
           <p class="card-text">{{ reviews.text }}</p>
 
-          <button class='editButton' >Edit</button>
+          <button class='editButton btn-btn-primary' >Edit</button>
           <a  href="{{url_for('delete', idNumber = reviews.id)}}" title="delete">Delete</a>
     
         </div>
