can now edit username

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -23,10 +23,10 @@
             </p>
         </div>
     </div>
-    <nav class="slides-navigation">
+    <!-- <nav class="slides-navigation">
         <a href="#" class="next"><i class="fas fa-angle-double-left"></i></a>
         <a href="#" class="prev"><i class="fas fa-angle-double-right"></i></a>
-    </nav>
+    </nav> -->
 </div>
 
 
