changed login and signup image to plant image

--- a/static/styles.css
+++ b/static/styles.css
@@ -1,6 +1,6 @@
 /* ! Background image for signin  */
 .backgroundImage {
-    background-image: url("/static/login.jpeg");
+    background-image: url("/static/carousel/plant1.jpeg");
     background-repeat: no-repeat;
     background-position: center;
     width: 100vw;
@@ -11,7 +11,7 @@
 
 /* ! Background image for signup  */
 .signupBackgroundImage {
-    background-image: url("/static/signup.jpeg");
+    background-image: url("/static/carousel/plant1.jpeg");
     background-repeat: no-repeat;
     background-position: center;
     width: 100vw;
