changed route name to profile

--- a/templates/stream.html
+++ b/templates/stream.html
@@ -74,7 +74,7 @@
           <p class="card-text">{{ reviews.rating }}</p>
           <p class="card-text">{{ reviews.text }}</p>
 
-          <button class='editB' >Edit</button>
+          <button class='editButton' >Edit</button>
           <a  href="{{url_for('delete', idNumber = reviews.id)}}" title="delete">Delete</a>
     
         </div>
