--- a/templates/swipe.html
+++ b/templates/swipe.html
@@ -2,11 +2,16 @@
 {% from 'macros.html' import render_field %}
 
 {% block content %}
+<div class="swipeBackgroundImage ">
 <h1 class="text-center">Swipe Page</h1>
-<div class="card">
-    <div>
-        <img class="plantImage" src="{{url_for('static', filename='lizard.jpg')}}" />
+
+
+<div class="card swipeCard">
+
+    <div class ="plantImageDiv" >
+        <img class="plantImage " src="{{url_for('static', filename='lizard.jpg')}}" />
     </div>
+
 
     <div>
         <span class="species">Species</span>
@@ -31,9 +36,15 @@
 </div>
 
 
+
+
+
+
+
 <div>
-    <h1>Your Bebez</h1>
+    
     <ul class="yasPlants">
+            <h1>Your Bebez</h1>
     </ul>
 
 </div>
@@ -41,8 +52,8 @@
 <form method="POST" action="">
     {{ form3.hidden_tag() }}
     <input hidden="hidden" id="userPlants" name="userPlants" type="text" value="">
-    <button id= "submit" type="submit" >Save ya Plantz</button>
+    <button class= "reviewButtons" id= "submit" type="submit" >Save ya Plantz</button>
 </form>
 
-
+</div>
 {% endblock %}
