--- a/templates/login.html
+++ b/templates/login.html
@@ -15,6 +15,17 @@
             <button class="btn btn-primary" type="submit" id="submit">Login</button>
         </form>
 
+        {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+          <ul class=flashes>
+          {% for category, message in messages %}
+            <li class="{{ category }}">{{ message }}</li>
+          {% endfor %}
+          </ul>
+        {% endif %}
+      {% endwith %}
+        {% endblock %}
+   
     </div>
 </div>
-{% endblock %}
+
