--- a/templates/swipe.html
+++ b/templates/swipe.html
@@ -3,7 +3,10 @@
 
 {% block content %}
 <div class="swipeBackgroundImage ">
+
+<h1 class= "temp"></h1>
 <h1 class="text-center">Swipe Page</h1>
+
 
 
 <div class="card swipeCard">
@@ -42,8 +45,10 @@
 
 
 <div>
+
     
     <ul class="yasPlants">
+
             <h1>Your Bebez</h1>
     </ul>
 
