--- a/static/styles.css
+++ b/static/styles.css
@@ -87,3 +87,21 @@
 
 
 }
+
+/* !card  */
+div.card {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    border: 1px solid black;
+    width: 350px;
+}
+
+.container {
+    width: 400px;
+}
+.card img {
+    width: 350px;
+    height: 326px;
+}
