--- a/templates/swipe.html
+++ b/templates/swipe.html
@@ -3,62 +3,34 @@
 
 {% block content %}
 <div class="swipeBackgroundImage ">
-
-<h1 class= "temp"></h1>
-<h1 class="text-center">Swipe Page</h1>
-
-
-
-<div class="card swipeCard">
-
-    <div class ="plantImageDiv" >
-        <img class="plantImage " src="{{url_for('static', filename='lizard.jpg')}}" />
+    <h1 class= "temp"></h1>
+    <h1 class="text-center">Swipe Page</h1>
+    <div class="card swipeCard">
+        <div class="card-header species">
+        </div>
+        <div class ="plantImageDiv" >
+            <img class="plantImage " src="{{url_for('static', filename='lizard.jpg')}}"/>
+        </div>
+        <ul class="list-group list-group-flush">
+                <li class="list-group-item difficulty">Difficulty</li>
+                <li class="list-group-item water">Water</li>
+                <li class="list-group-item light">light</li>
+        </ul>
+        <div class="swipedThru" style="display:none">You swiped through all the cards!</div>
+        <div class="btn-group">
+            <button class="btn btn-success yesButton">YEUUUHHH</button>
+            <button class="btn btn-danger noButton">NOIIII</button>
+        </div>
     </div>
-
-
     <div>
-        <span class="species">Species</span>
+        <ul class="yasPlants">
+                <h1>Your Bebez</h1>
+        </ul>
     </div>
-
-    <div>
-        <span class="difficulty">Difficulty</span>
-    </div>
-
-    <div>
-        <span class="water">Water</span>
-    </div>
-
-    <div>
-        <span class="light">Light</span>
-    </div>
-    <div class="swipedThru" style="display:none">You swiped through all the cards!</div>
-    <div class="btn-group">
-        <button class="btn btn-success yesButton">YEUUUHHH</button>
-        <button class="btn btn-danger noButton">NOIIII</button>
-    </div>
-</div>
-
-
-
-
-
-
-
-<div>
-
-    
-    <ul class="yasPlants">
-
-            <h1>Your Bebez</h1>
-    </ul>
-
-</div>
-
-<form method="POST" action="">
-    {{ form3.hidden_tag() }}
-    <input hidden="hidden" id="userPlants" name="userPlants" type="text" value="">
-    <button class= "reviewButtons" id= "submit" type="submit" >Save ya Plantz</button>
-</form>
-
+    <form method="POST" action="">
+        {{ form3.hidden_tag() }}
+        <input hidden="hidden" id="userPlants" name="userPlants" type="text" value="">
+        <button class= "reviewButtons" id= "submit" type="submit" >Save ya Plantz</button>
+    </form>
 </div>
 {% endblock %}
